--- a/rtmath/rtmath-win-ui/rtmath-win-ui.vcxproj.filters
+++ b/rtmath/rtmath-win-ui/rtmath-win-ui.vcxproj.filters
@@ -33,13 +33,13 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="frmMain.cpp">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="rtRun.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="rtModel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="frmMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -67,9 +67,6 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmMain.resx">
-      <Filter>Resource Files</Filter>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmLayers.resx">
       <Filter>Resource Files</Filter>
     </EmbeddedResource>
   </ItemGroup>
